# AI_document_system

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
eval/: __init__.py  ablation.py  run_eval.py  scorers.py
eval/results/: ablation_table.md  eval_table.md
frontend/: app.js  index.html  styles.css
scripts/: README.md
src/: __init__.py  cli.py  config.py  limiter.py  main.py
src/agents/: __init__.py  extraction.py  matching.py  orchestrator.py  prompts.py
src/api/: models.py  routes.py
src/documents/: __init__.py  parser.py  schemas.py
src/retrieval/: __init__.py  hybrid.py
src/storage/: __init__.py  bm25.py  store.py  vector.py
tests/: __init__.py  test_agents.py  test_api.py  test_parser.py  test_schemas.py  test_storage.py
